<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    android:orientation="vertical"
    android:padding="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="132dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:src="@drawable/person"
        />
    <EditText
        android:id="@+id/loginEmail"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"
        android:textStyle="italic"
        android:hint="@string/email"
        android:drawableStart="@drawable/email"
        />
    <EditText
        android:id="@+id/loginPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"
        android:textStyle="italic"
        android:hint="@string/password"
        android:drawableStart="@drawable/password"
        />
   <CheckBox
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="@string/remember_me"
       android:layout_marginVertical="25dp"
       android:textSize="15sp"
       />

    <Button
        android:id="@+id/logIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColorHighlight="#1372BD"
        android:textColorHint="#1372BD"
        android:textColorLink="#1372BD" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/login_with_google"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/login_with_facebook"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/toRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:text="@string/do_not_have_an_account_sign_up"
        android:textColor="#7D7C7C"
        />
</LinearLayout>