<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="25dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#6750A4"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="center"

        />
    <EditText
        android:id="@+id/registerName"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:drawablePadding="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:drawableStart="@drawable/person"
        android:autofillHints="username" />
    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:textStyle="italic"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:autofillHints="emailAddress" />
    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"
        android:autofillHints="password" />
    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:drawableStart="@drawable/password"
        android:autofillHints="password" />

    <Spinner
        android:layout_marginTop="20dp"
        android:id="@+id/countrySpinner"
        android:minHeight="48dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/countrySpinner"
        />
    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:entries="@array/roleSpinner"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            />
        <RadioButton
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"
            />
    </RadioGroup>

    <Button
        android:id="@+id/signUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        />
    <TextView
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/do_not_have_an_account_login"
        />
</LinearLayout>